--- a/css/style.css
+++ b/css/style.css
@@ -161,4 +161,34 @@ body {
     color: white;
 }
 
+/*------------------------------------Alert------*/
+
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    color: #544600;
+    background-color:#d1af00;
+    border-color:#d1af00;
+    padding: 5px 15px;
+    margin-bottom: 0;
+    border: 1px solid transparent;
+    border-radius: 0;
+}
+
+/*------------------------------------Page Header------*/
+
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
 
